--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "autoload": {
         "classmap": [ "app/AppKernel.php" ],
         "psr-0": {
-            "Shyim\\PPM": "ppm/"
+            "Shyim\\PPM": "src/"
         }
     },
     "require": {
@@ -20,6 +20,7 @@
         "composer/installers": "^1.0",
         "shopware/shopware": "^5.5",
         "vlucas/phpdotenv": "~2.0",
+        "ocramius/package-versions": "1.2.0",
         "php-pm/php-pm": "^1.0",
         "php-pm/httpkernel-adapter": "dev-master"
     },
@@ -35,10 +36,7 @@
     ],
     "config": {
         "optimize-autoloader": true,
-        "process-timeout": 0,
-        "platform": {
-            "php": "5.6.4"
-        }
+        "process-timeout": 0
     },
     "scripts": {
         "post-root-package-install": [
